# langgraph-learning

./: .gitignore  Notes.md  fundamentals.md  humanInLoop.tldr  pyproject.toml
chatbot/: basic-chatbot.ipynb
chatbot-with-UI/: backend.py  backend_databasee.py  frontend.py  frontend_db.py  frontend_threading.py
conditional-workflow/: quad-eq.ipynb  review_handling.ipynb
core-concepts/: README.md
iterative-workflow/: post_generate.ipynb
langsmith-workflow/: 1_simple_llm_call.py  2_sequential_chain.py  3_rag_v1.py  3_rag_v2.py  3_rag_v3.py  3_rag_v4.py  5_langgraph.py
parallel-worklow/: parallel-workflow.ipynb  parallel_workflow_upsc.ipynb
persistance/: 10_persistence.ipynb  persis.ipynb
sequential-workflows/: basic.py  bmi.ipynb  prompt_chaining.ipynb  simple_llm.ipynb
